--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,41 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <springframework.version>5.2.2.RELEASE</springframework.version>
   </properties>
 
   <dependencies>
+
+    <!-- JMS支持-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+    <!-- activeMQ-->
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-core</artifactId>
+      <version>5.7.0</version>
+      <exclusions>
+        <exclusion><!-- 因为我们自己已经引用了这个包，并且这个包中也附带了这个包，所以需要排除掉 -->
+          <artifactId>spring-context</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.2.2.RELEASE</version>
+      <version>${springframework.version}</version>
     </dependency>
 
     <dependency>
